--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -3,7 +3,7 @@ name: Latest blog post workflow
 #   schedule:
 #     # Runs every hour
 #     - cron: '0 * * * *'
-#   workflow_dispatch:
+workflow_dispatch:
 
 jobs:
   update-readme-with-blog:
